admission/validatingAdmissionPolicies/policies/seccomp-profile/initcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: seccomp-profile-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: seccomp-profile-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-initcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    pss.security.kolteq.com/audit: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: seccomp-profile-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: seccomp-profile-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-initcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: seccomp-profile-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: seccomp-profile-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-initcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a56ead5a-79d8-5ede-9dce-3960023aeac4
  labels:
    seccomp-profile-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    seccomp-profile-initcontainers.security.kolteq.com/audit: 'false,true'
    seccomp-profile-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-initcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
